k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbadmin2-service
  namespace: sbadmin
spec:
  type: NodePort
  selector:
    app: sbadmin2
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
